[fix] overflow alert

--- a/files_client/web/css/window/background_game.css
+++ b/files_client/web/css/window/background_game.css
@@ -15,9 +15,11 @@ strong{
     height: 85%; 
     position: absolute;
     right: 0; 
-    bottom: 7%;
+    bottom: 15%;
     display: flex;
     flex-direction :column;
+
+    overflow: hidden;
 
     color: white;
 }
